# ddr-report-generation

./: .env  .gitignore  ABOUT_SKILLS.md  BEFORE_AFTER_COMPARISON.md  Claude.md  DDR_Final.docx  DDR_README.md  FINAL_PROJECT_STATUS.md  FINAL_SUMMARY.txt  IMAGE_MAPPING_FIX.md  QUICK_START.md  README.md  SYSTEM_SUMMARY.md  app.py  extractor.py  llm_processor.py  main.py  pyproject.toml  report_generator.py  requirements.txt  ~$R_Fixed.docx
.streamlit/: config.toml  secrets.toml
